[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "secret-santa-bot"
version = "1.0.0"
dependencies = [
    "aiogram==2.25.1",
    "sqlalchemy<2.0.0",
    "flask==2.3.0",
    "gunicorn==21.2.0",
    "apscheduler==3.10.1",
    "psycopg2-binary==2.9.9"
]

[tool.railway]
start = "web: gunicorn webhook_app:app"
python-version = "3.10"
